# soc-analyst-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  baseline_inference.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
data/: __init__.py  scenarios.py  threat_intel.py
server/: _fallback.py  app.py  environment.py  graders.py  requirements.txt
